kubernetes/apps/default/authelia/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.f9.casa`)
      kind: Rule
      services:
        - name: authelia
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
